Browser window's height shrinks and Y position shifts down after exiting full screen
Categories
(Core :: Window Management, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr91 | --- | unaffected |
| firefox-esr102 | --- | unaffected |
| firefox104 | --- | unaffected |
| firefox105 | + | verified |
| firefox106 | + | verified |
People
(Reporter: cpeterson, Assigned: rkraesig)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file, 1 obsolete file)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
@ Ray, his bug is a regression from your fix for full screen video bug 1776895. I bisected this regression to this pushlog:
Steps to reproduce
- Load any YouTube video (such as https://youtu.be/AU4S2efc_B0) or any other web page that uses the
requestFullscreen()API (such as https://www.w3schools.com/jsref/tryit.asp?filename=tryjsref_element_requestfullscreen). - Zoom or maximize the screen, i.e. make the window as big as the screen without making it full screen.
- Make the video full screen by pressing the
Fkey or clicking the video player's "Full screen" button. - Exit full screen by pressing the
ForEsckey or clicking the the video player's "Exit full screen".
Expected result
The browser window should return to its previous window dimensions.
Actual result
The browser window's height shrinks and its Y position shifts down the screen.
I'm testing Firefox on macOS 12.5.1 on a MacBook Air. I haven't tested Windows or Linux.
| Reporter | ||
Updated•3 years ago
|
| Reporter | ||
Updated•3 years ago
|
Updated•3 years ago
|
| Assignee | ||
Comment 1•3 years ago
|
||
Lovely. Well, time to revert, and probably also uplift.
If you see this before that happens, can you post a log of that test-case with MOZ_LOG=BaseWidget:5?
| Assignee | ||
Comment 2•3 years ago
|
||
This reverts the following commits:
- 21f1ada7ee6ad5839fc0d9bc98e1ff2d558ef6e7
- cde5393917c483a3516f4c883af02834ddbf11d8
- 3d2dc8de0e7147d0d991c16c29ad9a8678a25635
- 4b17fb88efc581522c0edf0740da4c54c539d39a
- 7b0893449764054af7795df66c0c2e83a370d620
- bcc0fa996f5fd7cc677ca2a5e97329dcd6b74a04
- 9547ab55535d9713c95bc3344d1cc1357520ba92
Updated•3 years ago
|
| Reporter | ||
Comment 3•3 years ago
|
||
FWIW, I wasn't able to reproduce this bug on Windows 11, just macOS. (I still haven't tested Linux.)
| Assignee | ||
Comment 4•3 years ago
|
||
(In reply to Chris Peterson [:cpeterson] from comment #3)
FWIW, I wasn't able to reproduce this bug on Windows 11, just macOS. (I still haven't tested Linux.)
Yeah, this is almost certainly due to the unified menu bar on Mac not properly being accounted for -- a similar effect previously caused a mochitest to fail, but I thought I'd handled it. I suspect that the amount the window shifts down is either exactly the size of the menu bar or very slightly less, depending on which code path gets taken.
It's unlikely to manifest on Linux, although I admit I have no idea what GNOME's been up to lately. It almost certainly wouldn't under KDE.
| Assignee | ||
Comment 5•3 years ago
|
||
This reverts the following commits:
- 21f1ada7ee6ad5839fc0d9bc98e1ff2d558ef6e7
- cde5393917c483a3516f4c883af02834ddbf11d8
- 3d2dc8de0e7147d0d991c16c29ad9a8678a25635
- 4b17fb88efc581522c0edf0740da4c54c539d39a
- 7b0893449764054af7795df66c0c2e83a370d620
- bcc0fa996f5fd7cc677ca2a5e97329dcd6b74a04
- 9547ab55535d9713c95bc3344d1cc1357520ba92
Original Revision: https://phabricator.services.mozilla.com/D155237
| Comment hidden (obsolete) |
Updated•3 years ago
|
| Assignee | ||
Comment 8•3 years ago
|
||
Comment on attachment 9290933 [details]
Bug 1786226 - Revert all patches for regressing bug 1776895 r=cmartin
Beta/Release Uplift Approval Request
- User impact if declined: Mac users may have their windows moved out of place when returning from fullscreen video.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: Bug 1786226 comment 0. (Maximize the window, then check that double-tapping ⌘⇧F leaves it maximized.)
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): It's a straight revert of a recently-applied patch. No merge conflicts were encountered.
- String changes made/needed: —
- Is Android affected?: No
| Assignee | ||
Updated•3 years ago
|
Comment 9•3 years ago
|
||
Comment on attachment 9290933 [details]
Bug 1786226 - Revert all patches for regressing bug 1776895 r=cmartin
Approved for 105.0b2.
Updated•3 years ago
|
Comment 10•3 years ago
|
||
| bugherder uplift | ||
Comment 11•3 years ago
|
||
| bugherder | ||
Updated•3 years ago
|
Comment 12•3 years ago
|
||
I couldn't manage to reproduce this issue on my end, I tried on macOS 12.5, macOS 15, macOS 11.6, Windows 10/11 and on Ubuntu 20.04 x64.
Chris, could you please help me here with verifying the bug to see if it's fixed on Nightly and Beta.
Thanks.
| Reporter | ||
Comment 13•3 years ago
|
||
Verified fixed in Nightly 106 builds 2022-08-23 and 2022-08-24.
Surprisingly, I wasn't able to reproduce the bug in Beta 105.0b1, even though the backout was uplifted to 105.0b2. Regardless, the bug is not reproducible in Beta 105, which is all that matters.
I couldn't manage to reproduce this issue on my end, I tried on macOS 12.5, macOS 15, macOS 11.6, Windows 10/11 and on Ubuntu 20.04 x64.
I'm testing on a MacBook Air with a camera screen notch. Maybe the notch affects the screen size calculations?
| Assignee | ||
Comment 14•3 years ago
|
||
I'm testing on a MacBook Air with a camera screen notch. Maybe the notch affects the screen size calculations?
I can confirm this; the 2022-08-21 build exhibits this behavior on a device with a camera notch, but not on one without.
Description
•